--- a/index.html
+++ b/index.html
@@ -11,7 +11,9 @@
 <body>
     <nav>
         <div class="logo">
-            <img src="images/logo.png" alt="URS LOGO">
+           <a href="#">
+                <img src="images/logo.png" alt="URS LOGO">
+           </a>
         </div>
         <div class="links">
             <div class="nav-links">
@@ -45,6 +47,9 @@
                 </div>
             </div>
         </section>
+
+        <!-- Carousel -->
+
         <section class="third" id="ivints">
             <div id="hero-carousel" class="carousel slide" data-bs-ride="carousel">
                 <div class="carousel-indicators">
@@ -132,6 +137,9 @@
                 </button>
               </div>
         </section>
+
+        <!-- Events -->
+
         <section class="events" id="1">
             <div class="event-container">
                 <div class="title">
@@ -227,6 +235,9 @@ Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla conse
                 </div>
             </div>
         </section>
+
+        <!-- Mission and Vision -->
+
         <section class="urs" id="urs">
             <div class="logos">
                 <img src="images/URS LOGO 1.png" alt="">
