added media queries

--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
     <title>Silver Jubilee</title>
 </head>
 <body>
+
+    <button onclick="topFunction()" id="myBtn" class="myBtn"title="Go to top">▲</button>
+
     <nav>
         <div class="logo">
            <a href="#">
@@ -288,6 +291,8 @@ stewardship.
 
     </main>
 
+
+    <script src="app.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm" crossorigin="anonymous"></script>
 </body>
 </html>
