added members and about the subject button

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                 <a href="#">Home</a>
                 <a href="#ivints">Events</a>
                 <a href="#urs">Vision & Mission</a>
-                <a href="">About Us</a>
+                <a href="#about-us">About Us</a>
             </div>
         </div>
     </nav>
@@ -289,10 +289,40 @@ stewardship.
             
         </section>
 
+        <!--Members-->
+
+        <section class="memberss" id="about-us">
+            <div class="headerss">
+                <img src="images/mellontikos-logo 1.png" class="mell" alt="">
+                <h1 class="desc">Mellontikós; a Greek term for future, where the team considered possibilities and changes as opportunity!</h1>
+            </div>
+            <div class="mem-container">
+                <div class="images">
+                    <img src="images/aton.png" alt="">
+                    <img src="images/beltran.png" alt="">
+                    <img src="images/moreno.png" alt="">
+                    <img src="images/orbeta.png" alt="">
+                    <img src="images/victorino.png" alt="">
+                </div>
+            </div>
+
+        </section>
+        <section class="about-subject">
+            <div class="first-division">
+                <div class="fd">
+                    <img src="images/Hand coding-cuate 1.png" alt="">
+                </div>
+            </div>
+            <div class="second-division">
+                <h1>About the subject</h1>
+                <p>Web Technology refers to the various tools and techniques that are utilized in the process of communication between different types of devices over the Internet. A web browser is used to access web pages. Web browsers can be defined as programs that display text, data, pictures, animation, and video on the Internet.</p>
+            </div>
+        </section>
+
+
     </main>
 
 
-    <!-- Bianca Marie -->
 
 
     <script src="app.js"></script>
