modified container width in event images

--- a/index.html
+++ b/index.html
@@ -150,9 +150,7 @@
                 </div>
                 <div class="event-details">
                     <p class="par">
-                        Lorem Ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. 
-
-Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim.
+                        The University of Rizal System - Binangonan carried out a mass and a commemorative program at the Ynares Center Auditorium to inaugurate the celebration of Silver Jubilee. Important speakers and guests including Governor Nina Ricci Ynares delivered their speeches to congratulate the university for its 25th anniversary.
                     </p>
                 </div>
                 <div class="images-container">
@@ -169,9 +167,7 @@ Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla conse
                 </div>
                 <div class="event-details event-details1">
                     <p class="par par1">
-                        Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. 
-
-Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim.
+                        As a part of the celebrations, a business forum on the subject of "Innovation and Entrepreneurship: Pioneering Ideas for Business Growth" has been held. Mr. Jason Gaguan, Mr. Leonardo Quinitio, and Mr. Jericho Tagget are among the resource speakers.The event also includes the Annual URSB Graduate School Orientation.  
                     </p>
                 </div>
                 <div class="images-container">
@@ -188,15 +184,14 @@ Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla conse
                 </div>
                 <div class="event-details">
                     <p class="par">
-                        Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. 
-
-Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim.
+                        Some of the event's highlights were shown on the third day of celebrations, which began with the URSB students' anniversary march in which all URSB students participated. The bazaar's opening, during which every program from every college has set up its own booth.
+The Cosplay Competition, Mr. and Ms. URSB Candidate Presentation, and Course Presentation are all part of the celebrations as well..
                     </p>
                 </div>
                 <div class="images-container">
-                    <img class="img" src="images/Day 1 image.jpg" alt="">
-                    <img class = "img" src="images/Day 1 image1.jpg" alt="">
-                    <img class = "img" src="images/Day 1 image2.jpg" alt="">
+                    <img class="img" src="images/day3-1.jpg" alt="">
+                    <img class = "img" src="images/Day3-2.png" alt="">
+                    <img class = "img" src="images/Day3-3.jpg" alt="">
                 </div>
             </div>
         </section>
@@ -207,15 +202,13 @@ Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla conse
                 </div>
                 <div class="event-details event-details1">
                     <p class="par par1">
-                        Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. 
-
-Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim.
+                        On the fourth day of the celebration, the URSB students continued to have an enjoyable experience. The fourth day's events featured Zumba, in which many students and faculty members took part, and Palaro ng Lahi, in which students from different courses demonstrated their game-playing techniques. The Pop Idol: Solo and Duet Singing Competition was the last event, where several contestants showcased their singing capabilities.
                     </p>
                 </div>
                 <div class="images-container">
-                    <img class="img" src="images/Day 2 image.jpg" alt="">
-                    <img class = "img" src="images/Day 2 image1.jpg" alt="">
-                    <img class = "img" src="images/Day 2 image2.jpg" alt="">
+                    <img class="img" src="images/Day4-1.jpg" alt="">
+                    <img class = "img" src="images/Day4-2.png" alt="">
+                    <img class = "img" src="images/Day4-3.png" alt="">
                 </div>
             </div>
         </section>
@@ -226,15 +219,14 @@ Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla conse
                 </div>
                 <div class="event-details">
                     <p class="par">
-                        Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. 
-
-Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim.
+                        Not just students will be having fun on the 25th Anniversary, but also the University staffs, faculties, and personnels as they attended the Silver Jubilee Ball prepared by the organizers of the celebration.
+It also attended by some member of the student body of each colleges and their are also some intermission numbers performed.
                     </p>
                 </div>
                 <div class="images-container">
-                    <img class="img" src="images/Day 1 image.jpg" alt="">
-                    <img class = "img" src="images/Day 1 image1.jpg" alt="">
-                    <img class = "img" src="images/Day 1 image2.jpg" alt="">
+                    <img class="img" src="images/Day5-1.jpg" alt="">
+                    <img class = "img" src="images/Day5-2.jpg" alt="">
+                    <img class = "img" src="images/Day5-3.jpg" alt="">
                 </div>
             </div>
         </section>
@@ -319,6 +311,11 @@ stewardship.
             </div>
         </section>
 
+        <!--Footer-->
+
+        <footer>
+
+        </footer>
 
     </main>
 
