--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
 
     <button onclick="topFunction()" id="myBtn" class="myBtn"title="Go to top">▲</button>
 
+    <!--Navbar-->
+
     <nav>
         <div class="logo">
            <a href="#">
@@ -314,7 +316,50 @@ stewardship.
         <!--Footer-->
 
         <footer>
-
+             <div class="card">
+                <div class="footer-logo">
+                    <img src="images/logo.png" alt="">
+                </div>
+                <div class="urs-description">
+                    <p>
+                        The University of Rizal System (URS) as an organized academic entity composed of separate but interrelated units coordinates and integrates system-wide functions and activities. It has the prime mandate of providing instruction, research, extension and production to the public.
+                    </p>
+                </div>
+             </div>
+             <div class="card">
+                <div class="footer-title">
+                    <h1>Visit Us</h1>
+                </div>
+                <div class="urs-edu">
+                    <a href="">urs.edu.ph</a>
+                </div>
+               <div class="address">
+                    <p class="add">Address</p>
+                    <p class="Binangonan">Binangonan, Rizal</p>
+               </div>
+             </div>
+             <div class="card">
+                <div class="footer-title">
+                    <h1>Important Links</h1>
+                </div>
+                <div class="urs-edu urs-edu-flex">
+                    <a href="">Facebook</a>
+                    <a href="">Career</a>
+                </div>
+                <div class="urs-edu urs-edu-flex">
+                    <a href="">Twitter</a>
+                    <a href="">Support</a>
+                </div>
+                <div class="urs-edu urs-edu-flex">
+                    <a href="">Instagram</a>
+                    <a href="">Privacy Policy</a>
+                </div>
+             </div>
+             <div class="urs-css">
+                <div>
+                    <img src="images/URS, CSS logo.png" alt="">
+                </div>
+             </div>
         </footer>
 
     </main>
