--- a/index.html
+++ b/index.html
@@ -331,7 +331,7 @@ stewardship.
                     <h1>Visit Us</h1>
                 </div>
                 <div class="urs-edu">
-                    <a href="">urs.edu.ph</a>
+                    <a target="_blank"href="http://www.urs.edu.ph/">urs.edu.ph</a>
                 </div>
                <div class="address">
                     <p class="add">Address</p>
@@ -361,6 +361,9 @@ stewardship.
                 </div>
              </div>
         </footer>
+        <div class="copyrights">
+            <h1>© 2023-Present, All Rights Reserved</h1>
+        </div>
 
     </main>
 
