--- a/index.html
+++ b/index.html
@@ -342,18 +342,14 @@ stewardship.
                 <div class="footer-title">
                     <h1>Important Links</h1>
                 </div>
-                <div class="urs-edu urs-edu-flex">
+                <div class="soc-urs-edu">
                     <a href="">Facebook</a>
                     <a href="">Career</a>
-                </div>
-                <div class="urs-edu urs-edu-flex">
                     <a href="">Twitter</a>
                     <a href="">Support</a>
-                </div>
-                <div class="urs-edu urs-edu-flex">
                     <a href="">Instagram</a>
                     <a href="">Privacy Policy</a>
-                </div>
+                 </div>
              </div>
              <div class="urs-css">
                 <div>
@@ -362,7 +358,7 @@ stewardship.
              </div>
         </footer>
         <div class="copyrights">
-            <h1>© 2023-Present, All Rights Reserved</h1>
+            <h1>© 2023, All Rights Reserved</h1>
         </div>
 
     </main>
