removed period in day 3 events

--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@
                 <div class="event-details">
                     <p class="par">
                         Some of the event's highlights were shown on the third day of celebrations, which began with the URSB students' anniversary march in which all URSB students participated. The bazaar's opening, during which every program from every college has set up its own booth.
-The Cosplay Competition, Mr. and Ms. URSB Candidate Presentation, and Course Presentation are all part of the celebrations as well..
+The Cosplay Competition, Mr. and Ms. URSB Candidate Presentation, and Course Presentation are all part of the celebrations as well.
                     </p>
                 </div>
                 <div class="images-container">
@@ -360,7 +360,6 @@ stewardship.
         <div class="copyrights">
             <h1>© 2023, All Rights Reserved</h1>
         </div>
-
     </main>
 
 
